--- a/.github/workflows/UpstreamSync.yml
+++ b/.github/workflows/UpstreamSync.yml
@@ -2,8 +2,8 @@ name: 'Upstream Sync'
 
 on:
   schedule:
-    - cron:  '0 */4 * * *'
-    # scheduled at every 4 hours
+    - cron:  '5 0 * * *'
+    # scheduled every day at 0:05 UTC
 
   workflow_dispatch:  # click the button on Github repo!
 
@@ -22,8 +22,7 @@ jobs:
         # sync action checks out your 'target_sync_branch' anyway
         ref:  master
         token: ${{ secrets.GITHUB_TOKEN }}
-        #git_config_user: chemodun
-        #git_config_email: chemodun@gmail.com
+        # to exclude a 'local' commits with upstream changes
         git_config_pull_rebase: true
         # REQUIRED if your upstream repo is private (see wiki)
         persist-credentials: false
@@ -35,16 +34,15 @@ jobs:
       id: sync
       uses: PeterVoronov/Fork-Sync-With-Upstream-action@current
       with:
-        target_sync_branch: master
-        # REQUIRED 'target_repo_token' exactly like this!
-        target_repo_token: ${{ secrets.SYNCWITHUPSTREAM }}
-        upstream_sync_branch: master
+        #upstream config
         upstream_sync_repo: Koenkk/zigbee-herdsman-converters
+        upstream_sync_branch: master
         #upstream_repo_access_token: ${{ secrets.UPSTREAM_REPO_SECRET }}
         upstream_pull_args: '--allow-unrelated-histories'
-        #git_config_user: chemodun
-        #git_config_email: chemodun@gmail.com
-        git_config_pull_rebase: true
+        #target config
+        target_sync_branch: master
+        # REQUIRED 'target_repo_token'
+        target_repo_token: ${{ secrets.SYNCWITHUPSTREAM }}        
         # Set test_mode true to run tests instead of the true action!!
         test_mode: false
       
